--- a/Customer_Segmentation.ipynb
+++ b/Customer_Segmentation.ipynb
@@ -2799,9 +2799,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9 (XPython)",
    "language": "python",
-   "name": "python3"
+   "name": "xpython"
   },
   "language_info": {
    "codemirror_mode": {
